--- a/docs/man/man1/kubectl-config-set-credentials.1
+++ b/docs/man/man1/kubectl-config-set-credentials.1
@@ -150,10 +150,12 @@ Bearer token and basic auth are mutually exclusive.
 $ kubectl config set\-credentials cluster\-admin \-\-client\-key=\~/.kube/admin.key
 
 // Set basic auth for the "cluster\-admin" entry
-$ kubectl config set\-credentials cluster\-admin \-\-username=admin \-\-password=uXFGweU9l35qcif
+$ kubectl config set\-credentials cluster\-admin \-\-username=admin \\
+  \-\-password=uXFGweU9l35qcif
 
 // Embed client certificate data in the "cluster\-admin" entry
-$ kubectl config set\-credentials cluster\-admin \-\-client\-certificate=\~/.kube/admin.crt \-\-embed\-certs=true
+$ kubectl config set\-credentials cluster\-admin \\
+  \-\-client\-certificate=\~/.kube/admin.crt \-\-embed\-certs=true
 
 .fi
 .RE
